--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./src/server.js",
-    "migrate": "knex migrate:latest"
+    "migrate": "knex migrate:latest",
+    "start": "pm2-runtime start ecosystem.config.js --env production"
   },
   "keywords": [],
   "author": "Edna Maria Farias Moreira",
@@ -19,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "knex": "^2.5.1",
     "multer": "^1.4.5-lts.1",
+    "pm2": "^5.3.0",
     "sqlite": "^5.0.1",
     "sqlite3": "^5.1.6"
   },
